# sqlite-muninn

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  cliff.toml  index.cjs  index.d.ts  index.mjs  mkdocs.yml  package.json  pyproject.toml  setup.py
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  claude.yml  docs.yml  publish.yml
benchmarks/: Makefile  Makefile.refactored
benchmarks/charts/: adj_betweenness.json  adj_build_time.json  adj_closeness.json  adj_degree.json  adj_disk_usage.json  adj_leiden.json  adj_rebuild_time.json  adj_trigger_overhead.json  dataset_comparison_BGE-Large.json  dataset_comparison_MPNet.json  dataset_comparison_MiniLM.json  dataset_comparison_NomicEmbed.json  db_size_models.json  db_size_models_ag_news.json  db_size_models_wealth_of_nations.json  embed_insert_wealth_of_nations.json  embed_only_wealth_of_nations.json  embed_ql_MiniLM_wealth_of_nations.json  embed_recall_wealth_of_nations.json  embed_xmodel_wealth_of_nations.json  graph_query_time_betweenness.json  graph_query_time_bfs.json  graph_query_time_bfs_barabasi_albert.json  graph_query_time_bfs_erdos_renyi.json  graph_query_time_closeness.json  graph_query_time_components.json  graph_query_time_components_barabasi_albert.json  graph_query_time_components_erdos_renyi.json  graph_query_time_degree.json  graph_query_time_dfs.json  graph_query_time_dfs_barabasi_albert.json  graph_query_time_dfs_erdos_renyi.json  graph_query_time_leiden.json  graph_query_time_pagerank.json  graph_query_time_pagerank_barabasi_albert.json  graph_query_time_pagerank_erdos_renyi.json  graph_query_time_shortest_path.json  graph_setup_time.json  (+24 more)
docs/: CLAUDE.md  api.md  architecture.md  benchmarks.md  centrality-community.md  chat-and-extraction.md  entity-resolution.md  getting-started.md  graph-select.md  graphrag-cookbook.md  index.md  node2vec.md  plan-temporal-tvfs.md  text-embeddings.md  wasm-demo.md
examples/: README.md  e2e_colab.py
npm/: index.cjs  index.mjs  package-lock.json  package.json
pytests/: conftest.py  test_chat_gguf.py  test_embed_gguf.py  test_g3_brandes_share.py  test_graph_adjacency.py  test_graph_centrality.py  test_graph_community.py  test_graph_select.py  test_hnsw_vtab.py  test_install.py  test_package.py
python/: benchmark.py  benchmark_analyze.py  benchmark_compare.py  conftest.py  test_graph_tvf.py  test_hnsw_vtab.py  test_node2vec.py
scripts/: amalgamate.sh  build_wasm.sh  build_windows.bat  explore_logo.py  exportenv.py  generate_build.py  generate_npm_packages.py  logo_config.json  process_logo.py  prompt.md  prompt_pose_call.md  prompt_pose_dive.md  prompt_pose_inspect.md  prompt_poses.md  validate_skill_examples.py  verify_cosine.py  verify_sqlite3_ext.py  version_stamp.py
skills/: CLAUDE.md  README.md
sqlite_muninn/: __init__.py
src/: CLAUDE.md  embed_gguf.c  er.c  er.h  graph_adjacency.c  graph_adjacency.h  graph_centrality.c  graph_centrality.h  graph_common.h  graph_community.c  graph_community.h  graph_csr.c  graph_csr.h  graph_load.c  graph_load.h  graph_select_tvf.c  graph_select_tvf.h  graph_selector_eval.c  graph_selector_eval.h  graph_selector_parse.c  graph_selector_parse.h  graph_topk_cache.c  graph_topk_cache.h  graph_tvf.c  graph_tvf.h  hnsw_algo.c  hnsw_algo.h  hnsw_vtab.c  hnsw_vtab.h  id_validate.c  id_validate.h  llama_chat.c  llama_chat.h  llama_common.c  llama_common.h  llama_constants.h  llama_embed.c  llama_embed.h  llama_er.c  llama_er.h  (+17 more)
test/: test_brandes_share.c  test_common.h  test_gii_communities_consume.c  test_gii_communities_shadow.c  test_gii_sssp_shadow.c  test_graph_csr.c  test_graph_load.c  test_graph_selector.c  test_hnsw_algo.c  test_id_validate.c  test_llama_chat.c  test_llama_embed.c  test_main.c  test_priority_queue.c  test_provenance.c  test_string_sim.c  test_topk_cache.c  test_vec_math.c
viz/: .gitignore  CLAUDE.md  Makefile  pyproject.toml
viz/docs/: graph-viz-architecture.md
viz/frontend/: .gitignore  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
viz/frontend/e2e/: database-switch.spec.ts  global-setup.ts  graph.spec.ts  kg-pipeline.spec.ts  navigation.spec.ts  permutations.spec.ts  smoke.spec.ts  vss.spec.ts  wasm.spec.ts
viz/frontend/e2e/helpers/: checkpoint.ts  collect.ts  sitemap.ts  wait.ts
viz/frontend/public/: .gitignore
viz/frontend/public/wasm/: .gitignore  index.html  script.js  styles.css
viz/frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
viz/frontend/src/components/: AppSidebar.tsx  DatabaseSelector.tsx  EmbeddingCanvas.tsx  GraphCanvas.tsx  Layout.tsx  RightPanel.tsx  Sidebar.tsx  ThemeToggle.tsx
viz/frontend/src/hooks/: useKGPipeline.ts
viz/frontend/src/lib/: ThemeProvider.tsx  api-client.ts  constants.ts  theme-context.ts  types.ts
viz/frontend/src/lib/__tests__/: api-client.test.ts  cytoscape.test.ts  db-service.test.ts  kg-pipeline.test.ts  kg-service.test.ts
viz/frontend/src/lib/services/: db-service.ts  kg-service.ts
viz/frontend/src/lib/transforms/: cytoscape.ts  deckgl.ts  kg-pipeline.ts
viz/frontend/src/pages/: DatabasePage.tsx  EmbedPage.tsx  EmbeddingsPage.tsx  GraphPage.tsx  HomePage.tsx  KGPage.tsx  KGQueryPage.tsx
viz/frontend/src/pages/__tests__/: DatabasePage.test.tsx  EmbedPage.test.tsx  HomePage.test.tsx  KGPage.test.tsx
viz/frontend/src/types/: cytoscape-plugins.d.ts
viz/scripts/: inspect_case.py  inspect_demo_db.py  inspect_joins.py  inspect_upper.py
viz/server/: __main__.py  config.py  databases.py  db.py  embed.py  kg.py  main.py
viz/server/routes/: databases.py  health.py  kg.py  vss.py
viz/server/services/: db.py  kg.py
viz/tests/: conftest.py  test_browser_reliability.sh  test_databases.py  test_db.py  test_embed.py  test_kg.py  test_main.py  test_routes_databases.py  test_routes_graph.py  test_routes_health.py  test_routes_kg.py  test_routes_vss.py  test_server_reliability.sh  test_services_db.py  test_services_kg.py
wasm/: .gitignore  Makefile  README.md  index.html  script.js  styles.css
(+330 files in other folders)
