[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-muninn"
dynamic = ["version"]
description = "HNSW vector search + graph traversal + GGUF embeddings + Node2Vec for SQLite"
requires-python = ">=3.12,<3.14"
license = "MIT"
readme = "README.md"
keywords = ["sqlite", "vector", "hnsw", "graph", "node2vec", "search", "gguf", "embeddings", "llama.cpp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "boto3>=1.42.76",
    "einops>=0.8.2",
    "gguf>=0.18.0",
    "gliner>=0.2.25",
    "gliner2>=1.2.4",
    "glirel>=1.2.1",
    "huggingface-hub>=1.4.1",
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "playwright>=1.58.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.2.2",
    "spacy>=3.8.11",
    "umap-learn>=0.5.11",
]

[project.urls]
Homepage = "https://github.com/user/sqlite-muninn"
Repository = "https://github.com/user/sqlite-muninn"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["sqlite_muninn*"]

[tool.setuptools.package-data]
sqlite_muninn = ["*.so", "*.dylib", "*.dll"]

# Development dependency groups (not package dependencies)
[dependency-groups]
benchmark = [
    "numpy>=2.0,<2.4",
    "numba>=0.60",
    "umap-learn>=0.5.7",
    "plotly>=6.5.2",
    "jinja2>=3.1.0",
    # Competitors / peers depending how you look at it
    "apsw",
    "sqliteai-vector>=0.9.70",
    "vectorlite-py",
    "sqlite-vec",
    "graphqlite",
    # Models and Benchmarking Datasets
    "datasets>=4.5.0",
    "sentence-transformers>=5.2.2",
    "einops",  # required by nomic-embed-text-v1.5 (trust_remote_code model)
    "gliner",
    "glirel",
    "loguru",
    "spacy",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "textacy",
    "recordlinkage",
    "llama-cpp-python>=0.3.16",
    "gliner2>=1.2.4",
    "dash>=4.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-plotly-plugin>=0.1.3",
    "networkx",
    # Dependencies for the examples/
    "sqlite-lembed",
    "sqlite-rembed"
]
dev = [
    "diagrams>=0.25.1",
    "gcovr>=8.6",
    "git-cliff>=2.12.0",
    "jupytext>=1.16.0",
    "mypy>=1.19.1",
    "nbmake>=1.5.5",
    "pip>=26.0.1",
    "pysqlite3>=0.6.0",
    "pytest>=8.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]
cdk = [
    "aws-cdk-lib>=2.245.0",
    "constructs>=10.6.0",
]

[tool.pytest.ini_options]
testpaths = ["pytests"]
addopts = "--cov=sqlite_muninn --cov=pytests --cov-report=term-missing --cov-fail-under=90 -m 'not integration'"
markers = [
    "integration: slow install tests that create throwaway projects (deselected by default)",
    "gguf: tests requiring GGUF model files (auto-downloaded on first run)",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["vendor/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
# Benchmark harness and demo_builder are scripts, not library code.
# Relax annotation requirements while keeping real type checks.
module = ["benchmarks.harness", "benchmarks.harness.*", "benchmarks.demo_builder", "benchmarks.demo_builder.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

[tool.jupytext]
formats = "py:percent,ipynb"
